Aggregation resilient to non-face images; extended models now optional

--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -50,27 +50,24 @@
     "        model: str = \"sepaelv2\",\n",
     "        det_size: int = 320,\n",
     "        use_gpu: bool = True,\n",
-    "        gpu: int = 0, #which GPU to use\n",
+    "        gpu: int = 0,  # which GPU to use\n",
     "        magface=False,\n",
+    "        extended=True,\n",
     "    ):\n",
+    "        self.extended = extended\n",
+    "        if self.extended == True:\n",
+    "            allowed_modules = [\"detection\", \"landmark_3d_68\", \"genderage\"]\n",
+    "        else:\n",
+    "            allowed_modules = [\"detection\"]\n",
     "\n",
     "        self.det_size = (det_size, det_size)\n",
+    "\n",
     "        self.magface = magface\n",
-    "        # model_base_path = osp.join(osp.expanduser(\"~/.insightface/models\"), model)\n",
-    "        # adaface_model_folder = osp.join(model_base_path, \"adaface\")\n",
-    "        # det_path = osp.join(model_base_path, \"det_10g.onnx\")\n",
-    "        # rec_path = osp.join(adaface_model_folder, \"adaface_ir101web12m.onnx\")\n",
-    "\n",
-    "        # if not osp.exists(det_path):\n",
-    "        #    pass\n",
-    "\n",
-    "        # if not osp.exists(det_path):\n",
-    "        #    pass\n",
     "\n",
     "        self.detectmodel = FaceAnalysis(\n",
     "            name=model,\n",
-    "            # allowed_modules=[\"detection\",\"landmark_3d_68\",\"genderage\"],\n",
-    "            providers=[('CUDAExecutionProvider', {'device_id': gpu})]\n",
+    "            allowed_modules=allowed_modules,\n",
+    "            providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
     "            if use_gpu\n",
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
@@ -82,7 +79,7 @@
     "                \"adaface\",\n",
     "                \"adaface_ir101web12m.onnx\",\n",
     "            ),\n",
-    "            providers=[('CUDAExecutionProvider', {'device_id': gpu})]\n",
+    "            providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
     "            if use_gpu\n",
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
@@ -95,7 +92,7 @@
     "                    \"magface\",\n",
     "                    \"magface_iresnet100.onnx\",\n",
     "                ),\n",
-    "                providers=[('CUDAExecutionProvider', {'device_id': gpu})]\n",
+    "                providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
     "                if use_gpu\n",
     "                else [\"CPUExecutionProvider\"],\n",
     "            )\n",
@@ -129,7 +126,7 @@
     "        # Get index of the face closest to the center of image\n",
     "        idx = dist.index(min(dist))\n",
     "        return idx, faces[idx].kps\n",
-    "    \n",
+    "\n",
     "    def get_larger_face(self, img, faces):\n",
     "        \"\"\"\n",
     "        faces is a insightface object with keypoints and bounding_box\n",
@@ -142,7 +139,7 @@
     "        # Compute centers of faces and distances from certer of image\n",
     "        for idx, face in enumerate(faces):\n",
     "            box = face.bbox.astype(\"int\").flatten()\n",
-    "            areas.append(abs((box[2] - box[0])*(box[3] - box[1])))\n",
+    "            areas.append(abs((box[2] - box[0]) * (box[3] - box[1])))\n",
     "\n",
     "        # Get index of the face closest to the center of image\n",
     "        idx = areas.index(max(areas))\n",
@@ -173,13 +170,13 @@
     "        faces = self.detectmodel.get(bgr_img)\n",
     "        if len(faces) == 0:\n",
     "            return {}\n",
+    "\n",
     "        idx, kps = self.get_larger_face(bgr_img, faces)\n",
-    "        gender = \"M\" if faces[idx].gender == 1 else \"F\"\n",
-    "        age = faces[idx].age\n",
+    "\n",
     "        bbox = faces[idx].bbox.astype(\"int\")\n",
-    "        pitch, yaw, roll = faces[idx].pose\n",
     "        bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
     "        ipd = np.linalg.norm(kps[0] - kps[1])\n",
+    "\n",
     "        ada_inputs = {\n",
     "            self.ort_ada.get_inputs()[0].name: self._to_input_ada(bgr_aligned_face)\n",
     "        }\n",
@@ -188,16 +185,26 @@
     "        ret = {\n",
     "            \"keypoints\": kps,\n",
     "            \"ipd\": ipd,\n",
-    "            \"gender\": gender,\n",
-    "            \"age\": age,\n",
-    "            \"pitch\": pitch,\n",
-    "            \"yaw\": yaw,\n",
-    "            \"roll\": roll,\n",
     "            \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
     "            \"norm\": norm.flatten()[0],\n",
     "            \"bbox\": bbox,\n",
     "            \"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
     "        }\n",
+    "\n",
+    "        if self.extended:\n",
+    "            gender = \"M\" if faces[idx].gender == 1 else \"F\"\n",
+    "            age = faces[idx].age\n",
+    "            pitch, yaw, roll = faces[idx].pose\n",
+    "            ret = {\n",
+    "                **ret,\n",
+    "                **{\n",
+    "                    \"gender\": gender,\n",
+    "                    \"age\": age,\n",
+    "                    \"pitch\": pitch,\n",
+    "                    \"yaw\": yaw,\n",
+    "                    \"roll\": roll,\n",
+    "                },\n",
+    "            }\n",
     "\n",
     "        if self.magface:\n",
     "            # mag_inputs = {self.ort_mag.get_inputs()[0].name: self._to_input_mag(bgr_aligned_face)}\n",
@@ -246,12 +253,8 @@
     "            return []\n",
     "        ret = []\n",
     "        for face in faces:\n",
-    "\n",
     "            kps = face.kps\n",
     "            bbox = face.bbox.astype(\"int\")\n",
-    "            gender = \"M\" if face.gender == 1 else \"F\"\n",
-    "            age = face.age\n",
-    "            pitch, yaw, roll = face.pose\n",
     "            bgr_aligned_face = face_align.norm_crop(bgr_img, kps)\n",
     "            ipd = np.linalg.norm(kps[0] - kps[1])\n",
     "            ada_inputs = {\n",
@@ -261,16 +264,26 @@
     "            face_ret = {\n",
     "                \"keypoints\": kps,\n",
     "                \"ipd\": ipd,\n",
-    "                \"gender\": gender,\n",
-    "                \"age\": age,\n",
-    "                \"pitch\": pitch,\n",
-    "                \"yaw\": yaw,\n",
-    "                \"roll\": roll,\n",
     "                \"embedding\": normalized_embedding.flatten() * norm.flatten()[0],\n",
     "                \"norm\": norm.flatten()[0],\n",
     "                \"bbox\": bbox,\n",
     "                \"aligned_face\": cv2.cvtColor(bgr_aligned_face, cv2.COLOR_BGR2RGB),\n",
     "            }\n",
+    "\n",
+    "            if self.extended:\n",
+    "                gender = \"M\" if face.gender == 1 else \"F\"\n",
+    "                age = face.age\n",
+    "                pitch, yaw, roll = face.pose\n",
+    "                face_ret = {\n",
+    "                    **face_ret,\n",
+    "                    **{\n",
+    "                        \"gender\": gender,\n",
+    "                        \"age\": age,\n",
+    "                        \"pitch\": pitch,\n",
+    "                        \"yaw\": yaw,\n",
+    "                        \"roll\": roll,\n",
+    "                    },\n",
+    "                }\n",
     "\n",
     "            if self.magface:\n",
     "                # mag_inputs = {self.ort_mag.get_inputs()[0].name: self._to_input_mag(bgr_aligned_face)}\n",
@@ -289,16 +302,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
+      "set det-size: (320, 320)\n"
+     ]
+    }
+   ],
    "source": [
-    "ff = ForensicFace(use_gpu=True, magface=True)\n"
+    "ff = ForensicFace(use_gpu=True, magface=False, extended=True)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rafael/mambaforge/envs/onnxgpu/lib/python3.9/site-packages/insightface/utils/transform.py:68: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  P = np.linalg.lstsq(X_homo, Y)[0].T # Affine matrix. 3 x 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll']),\n",
+       " array([[471.42743, 418.605  ],\n",
+       "        [522.6893 , 418.05356],\n",
+       "        [498.822  , 449.08926],\n",
+       "        [479.34995, 476.4419 ],\n",
+       "        [514.33453, 476.06885]], dtype=float32),\n",
+       " array([441, 355, 548, 506]))"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results = ff.process_image_multiple_faces(\"tela.png\")\n",
     "results[0].keys(), results[0][\"keypoints\"], results[0][\"bbox\"]\n"
@@ -308,7 +361,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll']),\n",
+       " array([[103.60011, 139.88237],\n",
+       "        [174.2651 , 137.3372 ],\n",
+       "        [140.28094, 187.14757],\n",
+       "        [109.09432, 219.3402 ],\n",
+       "        [173.40782, 217.09576]], dtype=float32))"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results = ff.process_image_single_face(\"obama.png\")\n",
     "results.keys(), results[\"keypoints\"]\n"
@@ -344,7 +413,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8555971"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ff.compare(\"obama.png\", \"obama2.png\")\n"
    ]
@@ -385,8 +465,12 @@
     "    weights = []\n",
     "    for imgpath in list_of_image_paths:\n",
     "        d = self.process_image(imgpath)\n",
-    "        embeddings.append(d[\"embedding\"])\n",
-    "    return self.aggregate_embeddings(np.array(embeddings))\n"
+    "        if len(d) > 0:\n",
+    "            embeddings.append(d[\"embedding\"])\n",
+    "    if len(embeddings) > 0:\n",
+    "        return self.aggregate_embeddings(np.array(embeddings))\n",
+    "    else:\n",
+    "        return []\n"
    ]
   },
   {
@@ -428,7 +512,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CUDAExecutionProvider', 'CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}, 'CUDAExecutionProvider': {'do_copy_in_default_stream': '1', 'arena_extend_strategy': 'kNextPowerOfTwo', 'gpu_external_empty_cache': '0', 'gpu_external_free': '0', 'cudnn_conv_use_max_workspace': '0', 'gpu_mem_limit': '18446744073709551615', 'cudnn_conv_algo_search': 'EXHAUSTIVE', 'gpu_external_alloc': '0', 'device_id': '0'}}\n",
+      "find model: /home/rafael/.insightface/models/sepaelv2/genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
+      "set det-size: (320, 320)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(23.233418, 22.57745)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ff = ForensicFace(det_size=320, use_gpu=True, magface=True)\n",
     "good = ff.process_image(\"001_frontal.JPG\")\n",
