Add support for different adaface models

--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -46,7 +46,9 @@
     "\n",
     " O arquivo onnx do modelo de reconhecimento (adaface_ir101web12m.onnx) deve estar na pasta `~/.insightface/model/sepaelv2/adaface/`\n",
     "\n",
-    " O arquivo onnx do modelo magface (magface_iresnet100.onnx) deve estar na pasta `~/.insightface/model/sepaelv2/magface/`"
+    " O arquivo onnx do modelo magface (magface_iresnet100.onnx) deve estar na pasta `~/.insightface/model/sepaelv2/magface/`\n",
+    "\n",
+    " A partir da versão 0.1.5 é possível utilizar outros modelos além do `sepaelv2`"
    ]
   },
   {
