--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -31,6 +31,7 @@
     "import cv2\n",
     "import numpy as np\n",
     "import os.path as osp\n",
+    "from glob import glob\n",
     "from insightface.app import FaceAnalysis\n",
     "from insightface.utils import face_align\n"
    ]
@@ -72,13 +73,18 @@
     "            else [\"CPUExecutionProvider\"],\n",
     "        )\n",
     "        self.detectmodel.prepare(ctx_id=gpu if use_gpu else -1, det_size=self.det_size)\n",
-    "        self.ort_ada = onnxruntime.InferenceSession(\n",
+    "\n",
+    "        onnx_rec_model = glob(\n",
     "            osp.join(\n",
     "                osp.expanduser(\"~/.insightface/models\"),\n",
     "                model,\n",
     "                \"adaface\",\n",
-    "                \"adaface_ir101web12m.onnx\",\n",
-    "            ),\n",
+    "                \"adaface_*.onnx\",\n",
+    "            )\n",
+    "        )\n",
+    "        assert len(onnx_rec_model) == 1\n",
+    "        self.ort_ada = onnxruntime.InferenceSession(\n",
+    "            onnx_rec_model[0],\n",
     "            providers=[(\"CUDAExecutionProvider\", {\"device_id\": gpu})]\n",
     "            if use_gpu\n",
     "            else [\"CPUExecutionProvider\"],\n",
@@ -339,10 +345,10 @@
      "data": {
       "text/plain": [
        "(dict_keys(['keypoints', 'ipd', 'embedding', 'norm', 'bbox', 'aligned_face', 'gender', 'age', 'pitch', 'yaw', 'roll']),\n",
-       " array([[471.42743, 418.605  ],\n",
-       "        [522.6893 , 418.05356],\n",
-       "        [498.822  , 449.08926],\n",
-       "        [479.34995, 476.4419 ],\n",
+       " array([[471.42743, 418.60498],\n",
+       "        [522.68933, 418.05362],\n",
+       "        [498.82196, 449.08923],\n",
+       "        [479.3499 , 476.44193],\n",
        "        [514.33453, 476.06885]], dtype=float32),\n",
        " array([441, 355, 548, 506]))"
       ]
