Add extraction of faces from videos

--- a/_proc/00_forensicface.ipynb
+++ b/_proc/00_forensicface.ipynb
@@ -396,6 +396,98 @@
     "bad = ff.process_image(\"001_cam1_1.jpg\")\n",
     "good[\"magface_norm\"], bad[\"magface_norm\"]"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extração de faces de vídeos com margem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L343){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### ForensicFace.extract_faces\n",
+       "\n",
+       ">      ForensicFace.extract_faces (video_path:str, dest_folder:str=None,\n",
+       ">                                  every_n_frames:int=1, margin:float=2.0,\n",
+       ">                                  start_from:float=0.0)\n",
+       "\n",
+       "|    | **Type** | **Default** | **Details** |\n",
+       "| -- | -------- | ----------- | ----------- |\n",
+       "| video_path | str |  | path to video file |\n",
+       "| dest_folder | str | None | folder used to save extracted faces. If not provided, a new folder with the video name is created |\n",
+       "| every_n_frames | int | 1 | skip some frames |\n",
+       "| margin | float | 2.0 | margin to add to each face, w.r.t. detected bounding box |\n",
+       "| start_from | float | 0.0 | seconds after video start to begin processing |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "[source](https://github.com/rafribeiro/forensicface/blob/main/forensicface/app.py#L343){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
+       "### ForensicFace.extract_faces\n",
+       "\n",
+       ">      ForensicFace.extract_faces (video_path:str, dest_folder:str=None,\n",
+       ">                                  every_n_frames:int=1, margin:float=2.0,\n",
+       ">                                  start_from:float=0.0)\n",
+       "\n",
+       "|    | **Type** | **Default** | **Details** |\n",
+       "| -- | -------- | ----------- | ----------- |\n",
+       "| video_path | str |  | path to video file |\n",
+       "| dest_folder | str | None | folder used to save extracted faces. If not provided, a new folder with the video name is created |\n",
+       "| every_n_frames | int | 1 | skip some frames |\n",
+       "| margin | float | 2.0 | margin to add to each face, w.r.t. detected bounding box |\n",
+       "| start_from | float | 0.0 | seconds after video start to begin processing |"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| echo: false\n",
+    "#| output: asis\n",
+    "show_doc(ForensicFace.extract_faces)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [],
+   "source": [
+    "ff = ForensicFace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "language": "python"
+   },
+   "outputs": [],
+   "source": [
+    "ff.extract_faces(\n",
+    "    video_path=\"/home/rafael/productionID_3762907.mp4\",\n",
+    "    start_from=0,\n",
+    "    every_n_frames=10,\n",
+    "    dest_folder=\"/home/rafael/video_faces\",\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
