--- a/nbs/00_forensicface.ipynb
+++ b/nbs/00_forensicface.ipynb
@@ -549,6 +549,127 @@
     "bad = ff.process_image(\"001_cam1_1.jpg\")\n",
     "good[\"magface_norm\"], bad[\"magface_norm\"]\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extração de faces de vídeos com margem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "\n",
+    "@patch\n",
+    "def _get_extended_bbox(self: ForensicFace, bbox, frame_shape, margin_factor):\n",
+    "    # add a margin on the bounding box\n",
+    "    (startX, startY, endX, endY) = bbox.astype(\"int\")\n",
+    "    (h, w) = frame_shape[:2]\n",
+    "    out_width = (endX - startX) * margin_factor\n",
+    "    out_height = (endY - startY) * margin_factor\n",
+    "\n",
+    "    startX_out = int((startX + endX) / 2 - out_width / 2)\n",
+    "    endX_out = int((startX + endX) / 2 + out_width / 2)\n",
+    "    startY_out = int((startY + endY) / 2 - out_height / 2)\n",
+    "    endY_out = int((startY + endY) / 2 + out_height / 2)\n",
+    "\n",
+    "    # tests if the output bbox coordinates are out of frame limits\n",
+    "    if startX_out < 0:\n",
+    "        startX_out = 0\n",
+    "    if endX_out > int(w):\n",
+    "        endX_out = int(w)\n",
+    "    if startY_out < 0:\n",
+    "        startY_out = 0\n",
+    "    if endY_out > int(h):\n",
+    "        endY_out = int(h)\n",
+    "    return [startX_out, startY_out, endX_out, endY_out]\n",
+    "\n",
+    "\n",
+    "@patch\n",
+    "def extract_faces(\n",
+    "    self: ForensicFace,\n",
+    "    video_path: str,  # path to video file\n",
+    "    dest_folder: str = None,  # folder used to save extracted faces. If not provided, a new folder with the video name is created\n",
+    "    every_n_frames: int = 1,  # skip some frames\n",
+    "    margin: float = 2.0,  # margin to add to each face, w.r.t. detected bounding box\n",
+    "    start_from: float = 0.0,  # seconds after video start to begin processing\n",
+    "):\n",
+    "    if dest_folder is None:\n",
+    "        dest_folder = os.path.splitext(video_path)[0]\n",
+    "\n",
+    "    os.makedirs(dest_folder, exist_ok=True)\n",
+    "\n",
+    "    # initialize video stream from file\n",
+    "    vs = cv2.VideoCapture(video_path)\n",
+    "    fps = vs.get(cv2.CAP_PROP_FPS)\n",
+    "    start_frame = int(fps * start_from)\n",
+    "\n",
+    "    # seek to starting frame\n",
+    "    vs.set(cv2.CAP_PROP_POS_FRAMES, start_frame)\n",
+    "    current_frame = start_frame\n",
+    "    nfaces = 0\n",
+    "    while True:\n",
+    "\n",
+    "        if (current_frame % every_n_frames) != 0:\n",
+    "            current_frame = current_frame + 1\n",
+    "            vs.set(cv2.CAP_PROP_POS_FRAMES, current_frame)\n",
+    "            continue\n",
+    "\n",
+    "        ret, frame = vs.read()\n",
+    "\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        current_frame = current_frame + 1\n",
+    "        (h, w) = frame.shape[:2]\n",
+    "\n",
+    "        faces = self.detectmodel.get(frame)\n",
+    "        for i, face in enumerate(faces):\n",
+    "            startX, startY, endX, endY = face.bbox.astype(\"int\")\n",
+    "            faceW = endX - startX\n",
+    "            faceH = endY - startY\n",
+    "            outBbox = self._get_extended_bbox(\n",
+    "                face.bbox, frame.shape, margin_factor=margin\n",
+    "            )\n",
+    "            # export the face (with added margin)\n",
+    "            face_crop = frame[outBbox[1] : outBbox[3], outBbox[0] : outBbox[2]]\n",
+    "            face_img_path = os.path.join(\n",
+    "                dest_folder, f\"frame_{current_frame:07}_face_{i:02}.png\"\n",
+    "            )\n",
+    "            cv2.imwrite(face_img_path, face_crop)\n",
+    "            nfaces += 1\n",
+    "    vs.release()\n",
+    "    return nfaces\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff = ForensicFace()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ff.extract_faces(\n",
+    "    video_path=\"/home/rafael/productionID_3762907.mp4\",\n",
+    "    start_from=0,\n",
+    "    every_n_frames=10,\n",
+    "    dest_folder=\"/home/rafael/video_faces\",\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
